--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -2,9 +2,9 @@ spring:
   application:
     name: account
   datasource:
-    url: jdbc:postgresql://localhost:5432/click?characterEncoding=UTF-8&serverTimezone=Asia/Seoul
-    username: postgres
-    password: 1234
+    url: jdbc:postgresql://account-postgres-account:5432/click?characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+    username: {user}
+    password: {password}
   jpa:
     hibernate:
       ddl-auto: update
