--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -2,7 +2,7 @@ spring:
   application:
     name: account
   datasource:
-    url: jdbc:postgresql://account-postgres-account:5432/click?characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+    url: jdbc:postgresql://postgres-service:5432/click?characterEncoding=UTF-8&serverTimezone=Asia/Seoul
     username: {user}
     password: {password}
   jpa:
